add has access and fix some bugs
